# pokemonstadium

./: .env.example  Makefile  README.md  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: db.py  main.py  redis_client.py  settings.py  worker.py
frontend/: package.json
